# wikengine

./:  stuff.cpp  .gitignore  CMakeLists.txt  ColorFragmentShader.fragmentshader  README.md  TransformVertexShader.vertexshader  main.cpp  untitled.mtl
Engine/Include/: EngineCore.h
Engine/Src/Core/: BasicColorMaterial.cpp  BasicColorMaterial.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraFirstPerson.cpp  CameraFirstPerson.h  CameraFirstPersonScriptComponent.cpp  CameraFirstPersonScriptComponent.h  Common.cpp  Common.h  Deserializer.cpp  Deserializer.h  DirectionaLight.cpp  DirectionaLight.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  IComponent.h  ImGuiDebugHelper.cpp  ImGuiDebugHelper.h  InputManager.cpp  InputManager.h  LambertMaterial.cpp  LambertMaterial.h  MeshComponent.cpp  MeshComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  Scene.cpp  Scene.h  ScriptComponent.cpp  ScriptComponent.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUtility.cpp  ShaderUtility.h  SimpleForwardRenderer.cpp  (+5 more)
Engine/Src/Core/Helpers/: BasicCube.cpp  BasicCube.h  DebugCollider.cpp  DebugCollider.h  Player.cpp  Player.h
Engine/Src/Core/Shaders/: BasicColor.fs.glsl  BasicColor.vs.glsl  BasicLambert.fs.glsl  BasicLambert.vs.glsl  BasicTexture.fs.glsl  BasicTexture.vs.glsl
